# vl53l1x-linux

./: .clang-tidy  .gitignore  .gitlab-ci.yml  .gitmodules  .uncrustify.cfg  CMakeLists.txt  README.html  README.md  package.xml
cmake/: VL53L1X_Linux-config.cmake.in
docs/: Doxyfile
example/: CMakeLists.txt
example/calibration/: calibration.cpp
example/getDistance/: getDistance.cpp
example/setDistanceMode/: setDistanceMode.cpp
example/setRangeCycle/: setRangeCycle.cpp
example/speedMeasure/: speedMeasure.cpp
examples/: CMakeLists.txt  getDistance.cpp  multipleSensors.cpp
include/: I2CBus.hpp  VL53L1X.hpp
src/: I2CBus.cpp  VL53L1X.cpp  VL53L1X_default_config.cpp
tools/: build.sh  doxygen.sh  run-clang-tidy.sh  run-cppcheck.sh  run-uncrustify.sh
